Fix account menu text color on dark mode

--- a/app/ui-src/src/css/app.dark.scss
+++ b/app/ui-src/src/css/app.dark.scss
@@ -2,3 +2,8 @@
 .action-btn-dark {
   background-color: $grey-8;
 }
+
+.q-item.q-router-link--active.account-menu-item-dark,
+.q-item--active {
+  color: #1fee7a !important;
+}
